fix(deploy): checkpoint app config generation
- generate app configs in deploy-web workflow before build
- generate app configs in client Docker build

--- a/.github/workflows/deploy-web.yml
+++ b/.github/workflows/deploy-web.yml
@@ -88,6 +88,12 @@ jobs:
       - name: Generate web image assets
         run: ./packages/client/scripts/buildWebImageAssets.sh
 
+      - name: Generate app configs
+        run: |
+          npm install -g tsx
+          cd packages/app-builder
+          tsx src/cli.ts generate --app tearleads
+
       - name: Build packages
         run: pnpm build
         env:
