--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -31,6 +31,7 @@
   "license": "UNLICENSED",
   "dependencies": {
     "@tearleads/db": "workspace:*",
+    "@tearleads/sync": "workspace:*",
     "@tearleads/vfs-sync": "workspace:*",
     "@tearleads/shared": "workspace:*",
     "commander": "14.0.3",
