feat(ci): wire ecr oidc and shared state
- add GitHub Actions OIDC role support for CI ECR pushes
- add staging container publish workflow and integration deploy hook
- document and script GitHub repo var wiring for role ARNs
- move GitHub OIDC provider ownership to shared/github Terraform state
- point staging/prod ci-artifacts roles at shared provider ARN

--- a/.github/workflows/integration-deploy.yml
+++ b/.github/workflows/integration-deploy.yml
@@ -62,6 +62,15 @@ jobs:
     uses: ./.github/workflows/deploy-web.yml
     secrets: inherit
 
+  publish-staging-containers:
+    name: Publish Staging Containers
+    needs: [web-e2e, website-e2e, electron-e2e]
+    uses: ./.github/workflows/publish-staging-containers.yml
+    permissions:
+      contents: read
+      id-token: write
+    secrets: inherit
+
   deploy-android:
     name: Deploy Android
     needs: [android, android-maestro]
