fix(ci): address review feedback
- read shared GitHub OIDC provider ARN via terraform_remote_state
- fetch OIDC thumbprints dynamically via tls_certificate
- pin cloudflared staging image to a valid existing tag
- make client app generation app-name configurable and dedupe GH set helpers

--- a/packages/client/Dockerfile
+++ b/packages/client/Dockerfile
@@ -23,7 +23,8 @@ COPY scripts/downloadSqliteWasm.sh scripts/
 RUN scripts/downloadSqliteWasm.sh
 
 # Generate app config/theme assets required by client CSS imports.
-RUN cd packages/app-builder && pnpm exec tsx src/cli.ts generate --app tearleads
+ARG APP_NAME=tearleads
+RUN cd packages/app-builder && pnpm exec tsx src/cli.ts generate --app "${APP_NAME}"
 
 # Build all client dependencies with build scripts.
 RUN pnpm --filter @tearleads/client^... --if-present build
