--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "lint:rubocop": "pnpm --filter @tearleads/client lint:rubocop",
     "lint:ansible": "ansible-lint ansible/ terraform/stacks/staging/tee/ansible/ terraform/stacks/prod/tee/ansible/",
     "lint:md": "markdownlint-cli2 '**/*.md'",
+    "lint:knip": "knip -n --config knip.json --use-tsconfig-files",
+    "lint:knip:fix": "knip -n --config knip.json --use-tsconfig-files --fix --fix-type dependencies --format",
     "lintPreen": "./scripts/checkPreenEcosystem.sh --strict",
     "checkMswParity": "./scripts/preen/checkMswParity.ts",
     "format": "biome format --write .",
@@ -54,15 +56,11 @@
     "@biomejs/biome": "2.4.0",
     "@tsconfig/strictest": "2.0.8",
     "@types/node": "25.2.3",
-    "@types/pg": "8.16.0",
-    "@vitest/coverage-v8": "4.0.18",
-    "commander": "14.0.3",
     "concurrently": "9.2.1",
     "cross-env": "10.1.0",
     "husky": "9.1.7",
-    "madge": "8.0.0",
+    "knip": "5.83.1",
     "markdownlint-cli2": "0.21.0",
-    "pg": "8.18.0",
     "tsx": "4.21.0",
     "typescript": "5.9.3",
     "vitest": "4.0.18"
