--- a/packages/businesses/package.json
+++ b/packages/businesses/package.json
@@ -35,9 +35,7 @@
     "react-dom": "19.2.4"
   },
   "dependencies": {
-    "clsx": "2.1.1",
-    "lucide-react": "0.564.0",
-    "tailwind-merge": "3.4.1"
+    "lucide-react": "0.564.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "6.9.1",
