--- a/packages/photos/package.json
+++ b/packages/photos/package.json
@@ -30,16 +30,12 @@
   },
   "dependencies": {
     "@tanstack/react-virtual": "3.13.18",
-    "@tearleads/shared": "workspace:*",
-    "clsx": "2.1.1",
-    "lucide-react": "0.564.0",
-    "tailwind-merge": "3.4.1"
+    "lucide-react": "0.564.0"
   },
   "devDependencies": {
     "@tearleads/window-manager": "workspace:*",
     "@testing-library/jest-dom": "6.9.1",
     "@testing-library/react": "16.3.2",
-    "@testing-library/user-event": "14.6.1",
     "@types/node": "25.2.3",
     "@types/react": "19.2.14",
     "@types/react-dom": "19.2.3",
@@ -48,8 +44,6 @@
     "jsdom": "28.1.0",
     "react": "19.2.4",
     "react-dom": "19.2.4",
-    "react-i18next": "16.5.4",
-    "react-router-dom": "7.13.0",
     "typescript": "5.9.3",
     "vitest": "4.0.18",
     "vitest-fail-on-console": "0.10.1"
