--- a/packages/tee-client/package.json
+++ b/packages/tee-client/package.json
@@ -39,7 +39,6 @@
     "cross-env": "10.1.0",
     "msw": "2.12.10",
     "typescript": "5.9.3",
-    "vitest": "4.0.18",
-    "vitest-fail-on-console": "0.10.1"
+    "vitest": "4.0.18"
   }
 }
