--- a/packages/backups/package.json
+++ b/packages/backups/package.json
@@ -30,6 +30,8 @@
     "react-router-dom": "7.13.0"
   },
   "dependencies": {
+    "@uiw/react-md-editor": "4.0.11",
+    "mermaid": "11.12.2",
     "lucide-react": "0.564.0"
   },
   "devDependencies": {
