--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -27,13 +27,17 @@
   "peerDependencies": {
     "@tearleads/shared": "workspace:*",
     "react": "19.2.4",
-    "react-dom": "19.2.4"
+    "react-dom": "19.2.4",
+    "react-router-dom": "7.13.0"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "1.2.4",
     "@radix-ui/react-tooltip": "1.2.8",
+    "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
     "lucide-react": "0.564.0",
     "openapi-types": "12.1.3",
+    "react-router-dom": "7.13.0",
     "tailwind-merge": "3.4.1"
   },
   "devDependencies": {
@@ -49,6 +53,7 @@
     "jsdom": "28.1.0",
     "react": "19.2.4",
     "react-dom": "19.2.4",
+    "react-router-dom": "7.13.0",
     "typescript": "5.9.3",
     "vitest": "4.0.18",
     "vitest-fail-on-console": "0.10.1"
