--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -44,12 +44,16 @@
     "@capacitor/core": "8.1.0",
     "@capacitor/filesystem": "8.1.2",
     "@capacitor/keyboard": "8.0.0",
+    "@capacitor/preferences": "8.0.1",
     "@capacitor/share": "8.0.1",
     "@capawesome/capacitor-file-picker": "8.0.1",
     "@capgo/capacitor-native-biometric": "8.3.7",
     "@dnd-kit/core": "6.3.1",
+    "@dnd-kit/sortable": "10.0.0",
+    "@dnd-kit/utilities": "3.2.2",
     "@huggingface/transformers": "3.8.1",
     "@ionic/core": "8.7.17",
+    "@orama/orama": "3.1.18",
     "@radix-ui/react-slot": "1.2.4",
     "@tanstack/react-table": "8.21.3",
     "@tanstack/react-virtual": "3.13.18",
@@ -60,12 +64,15 @@
     "@tearleads/calendar": "workspace:*",
     "@tearleads/camera": "workspace:*",
     "@tearleads/classic": "workspace:*",
+    "@tearleads/compliance": "workspace:*",
     "@tearleads/contacts": "workspace:*",
     "@tearleads/db": "workspace:*",
     "@tearleads/email": "workspace:*",
     "@tearleads/health": "workspace:*",
+    "@tearleads/help": "workspace:*",
     "@tearleads/mls-chat": "workspace:*",
     "@tearleads/notes": "workspace:*",
+    "@tearleads/notifications": "workspace:*",
     "@tearleads/photos": "workspace:*",
     "@tearleads/search": "workspace:*",
     "@tearleads/settings": "workspace:*",
@@ -76,11 +83,13 @@
     "@tearleads/vfs-explorer": "workspace:*",
     "@tearleads/window-manager": "workspace:*",
     "@uiw/react-md-editor": "4.0.11",
+    "better-sqlite3-multiple-ciphers": "12.6.2",
     "class-variance-authority": "0.7.1",
     "drizzle-orm": "0.45.1",
     "file-type": "21.3.0",
     "i18next": "25.8.8",
     "i18next-browser-languagedetector": "8.2.1",
+    "invariant": "2.2.4",
     "lucide-react": "0.564.0",
     "mermaid": "11.12.2",
     "music-metadata": "11.12.0",
@@ -98,6 +107,9 @@
     "@capacitor/android": "8.1.0",
     "@capacitor/cli": "8.1.0",
     "@capacitor/ios": "8.1.0",
+    "@electron-toolkit/preload": "3.0.2",
+    "@electron-toolkit/utils": "4.0.0",
+    "@electron/rebuild": "4.0.3",
     "@playwright/test": "1.58.2",
     "@tailwindcss/vite": "4.1.18",
     "@tearleads/db-test-utils": "workspace:*",
@@ -106,19 +118,23 @@
     "@testing-library/react": "16.3.2",
     "@testing-library/user-event": "14.6.1",
     "@types/better-sqlite3": "7.6.13",
+    "@types/invariant": "2.2.37",
     "@types/node": "25.2.3",
     "@types/react": "19.2.14",
     "@types/react-dom": "19.2.3",
+    "@types/wicg-file-system-access": "2023.10.7",
     "@vitejs/plugin-react": "5.1.4",
     "@vitest/coverage-v8": "4.0.18",
     "@webgpu/types": "0.1.69",
     "cross-env": "10.1.0",
     "drizzle-kit": "0.31.9",
+    "electron": "40.4.1",
     "electron-builder": "26.7.0",
     "electron-vite": "5.0.0",
     "jsdom": "28.1.0",
     "openapi-types": "12.1.3",
     "rollup-plugin-visualizer": "6.0.5",
+    "svgo": "4.0.0",
     "tailwindcss": "4.1.18",
     "tsx": "4.21.0",
     "typescript": "5.9.3",
