--- a/packages/keychain/package.json
+++ b/packages/keychain/package.json
@@ -29,6 +29,7 @@
     "react-router-dom": "7.13.0"
   },
   "dependencies": {
+    "@tearleads/shared": "workspace:*",
     "lucide-react": "0.564.0"
   },
   "devDependencies": {
