--- a/packages/audio/package.json
+++ b/packages/audio/package.json
@@ -33,6 +33,7 @@
     "@tearleads/shared": "workspace:*",
     "clsx": "2.1.1",
     "lucide-react": "0.564.0",
+    "music-metadata": "11.12.0",
     "tailwind-merge": "3.4.1"
   },
   "devDependencies": {
@@ -49,6 +50,7 @@
     "react": "19.2.4",
     "react-dom": "19.2.4",
     "react-i18next": "16.5.4",
+    "react-router-dom": "7.13.0",
     "typescript": "5.9.3",
     "vitest": "4.0.18",
     "vitest-fail-on-console": "0.10.1"
