--- a/packages/backups/package.json
+++ b/packages/backups/package.json
@@ -47,6 +47,7 @@
     "jsdom": "28.1.0",
     "react": "19.2.4",
     "react-dom": "19.2.4",
+    "react-i18next": "16.5.4",
     "react-router-dom": "7.13.0",
     "typescript": "5.9.3",
     "vitest": "4.0.18",
