--- a/packages/chrome-extension/package.json
+++ b/packages/chrome-extension/package.json
@@ -11,7 +11,9 @@
     "test:watch": "cross-env DOTENV_CONFIG_QUIET=true vitest",
     "test:coverage": "cross-env DOTENV_CONFIG_QUIET=true vitest run --coverage"
   },
-  "dependencies": {},
+  "dependencies": {
+    "@tearleads/shared": "workspace:*"
+  },
   "devDependencies": {
     "@types/chrome": "0.1.36",
     "@types/node": "25.2.3",
