--- a/packages/classic/package.json
+++ b/packages/classic/package.json
@@ -27,8 +27,10 @@
   },
   "devDependencies": {
     "@tearleads/db": "workspace:*",
+    "@tearleads/db-test-utils": "workspace:*",
     "@testing-library/jest-dom": "6.9.1",
     "@testing-library/react": "16.3.2",
+    "@testing-library/user-event": "14.6.1",
     "@types/node": "25.2.3",
     "@types/react": "19.2.14",
     "@types/react-dom": "19.2.3",
