--- a/packages/console/package.json
+++ b/packages/console/package.json
@@ -34,6 +34,8 @@
     "lucide-react": "0.564.0"
   },
   "devDependencies": {
+    "@tearleads/help": "workspace:*",
+    "@tearleads/terminal": "workspace:*",
     "@tearleads/ui": "workspace:*",
     "@tearleads/window-manager": "workspace:*",
     "@testing-library/jest-dom": "6.9.1",
