--- a/packages/db/package.json
+++ b/packages/db/package.json
@@ -48,6 +48,7 @@
   "devDependencies": {
     "@types/pg": "8.16.0",
     "@vitest/coverage-v8": "4.0.18",
+    "drizzle-kit": "0.31.9",
     "tsx": "4.21.0",
     "typescript": "5.9.3",
     "vitest": "4.0.18",
