--- a/packages/email/package.json
+++ b/packages/email/package.json
@@ -31,7 +31,8 @@
   "dependencies": {
     "clsx": "2.1.1",
     "drizzle-orm": "0.45.1",
-    "lucide-react": "0.564.0"
+    "lucide-react": "0.564.0",
+    "tailwind-merge": "3.4.1"
   },
   "devDependencies": {
     "@tearleads/db": "workspace:*",
