--- a/packages/health/package.json
+++ b/packages/health/package.json
@@ -50,6 +50,7 @@
     "@testing-library/user-event": "14.6.1",
     "@types/react": "19.2.14",
     "@types/react-dom": "19.2.3",
+    "@vitejs/plugin-react": "5.1.4",
     "@vitest/coverage-v8": "4.0.18",
     "cross-env": "10.1.0",
     "drizzle-orm": "0.45.1",
