--- a/packages/msw/package.json
+++ b/packages/msw/package.json
@@ -39,6 +39,7 @@
     "@types/node": "25.2.3",
     "@vitest/coverage-v8": "4.0.18",
     "typescript": "5.9.3",
-    "vitest": "4.0.18"
+    "vitest": "4.0.18",
+    "vitest-fail-on-console": "0.10.1"
   }
 }
