--- a/packages/notes/package.json
+++ b/packages/notes/package.json
@@ -33,7 +33,9 @@
   "dependencies": {
     "@tanstack/react-virtual": "3.13.18",
     "@uiw/react-md-editor": "4.0.11",
-    "lucide-react": "0.564.0"
+    "clsx": "2.1.1",
+    "lucide-react": "0.564.0",
+    "tailwind-merge": "3.4.1"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "6.9.1",
@@ -47,6 +49,8 @@
     "jsdom": "28.1.0",
     "react": "19.2.4",
     "react-dom": "19.2.4",
+    "react-i18next": "16.5.4",
+    "react-router-dom": "7.13.0",
     "typescript": "5.9.3",
     "vitest": "4.0.18",
     "vitest-fail-on-console": "0.10.1"
