--- a/packages/settings/package.json
+++ b/packages/settings/package.json
@@ -32,10 +32,12 @@
     "@radix-ui/react-slot": "1.2.4",
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
+    "lucide-react": "0.564.0",
     "tailwind-merge": "3.4.1"
   },
   "devDependencies": {
     "@tearleads/ui": "workspace:*",
+    "@tearleads/window-manager": "workspace:*",
     "@testing-library/jest-dom": "6.9.1",
     "@testing-library/react": "16.3.2",
     "@testing-library/user-event": "14.6.1",
