--- a/packages/tee-api/package.json
+++ b/packages/tee-api/package.json
@@ -40,6 +40,7 @@
     "esbuild": "0.27.3",
     "tsx": "4.21.0",
     "typescript": "5.9.3",
-    "vitest": "4.0.18"
+    "vitest": "4.0.18",
+    "vitest-fail-on-console": "0.10.1"
   }
 }
