--- a/packages/vehicles/package.json
+++ b/packages/vehicles/package.json
@@ -27,8 +27,10 @@
   },
   "devDependencies": {
     "@types/react": "19.2.14",
+    "@types/react-dom": "19.2.3",
     "@vitest/coverage-v8": "4.0.18",
     "react": "19.2.4",
+    "react-dom": "19.2.4",
     "typescript": "5.9.3",
     "vitest": "4.0.18",
     "vitest-fail-on-console": "0.10.1"
