--- a/package.json
+++ b/package.json
@@ -56,11 +56,16 @@
     "@biomejs/biome": "2.4.0",
     "@tsconfig/strictest": "2.0.8",
     "@types/node": "25.2.3",
+    "@types/pg": "8.16.0",
+    "@vitest/coverage-v8": "4.0.18",
+    "commander": "14.0.3",
     "concurrently": "9.2.1",
     "cross-env": "10.1.0",
     "husky": "9.1.7",
     "knip": "5.83.1",
+    "madge": "8.0.0",
     "markdownlint-cli2": "0.21.0",
+    "pg": "8.18.0",
     "tsx": "4.21.0",
     "typescript": "5.9.3",
     "vitest": "4.0.18"
