--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -30,6 +30,7 @@
     "react-dom": "19.2.4"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "1.2.4",
     "@radix-ui/react-tooltip": "1.2.8",
     "clsx": "2.1.1",
     "lucide-react": "0.564.0",
