--- a/packages/client/tsconfig.json
+++ b/packages/client/tsconfig.json
@@ -7,6 +7,8 @@
     "allowImportingTsExtensions": true,
     "resolveJsonModule": true,
     "noEmit": true,
+    "incremental": true,
+    "tsBuildInfoFile": "./node_modules/.cache/tsc/tsconfig.tsbuildinfo",
     "jsx": "react-jsx",
     "baseUrl": ".",
     "paths": {
