--- a/scripts/tsconfig.json
+++ b/scripts/tsconfig.json
@@ -8,6 +8,7 @@
     "allowImportingTsExtensions": true,
     "noPropertyAccessFromIndexSignature": false,
     "noEmit": true,
+    "incremental": true,
     "tsBuildInfoFile": "./dist/.tsbuildinfo"
   },
   "include": ["./**/*.ts"],
