--- a/packages/client/tsconfig.json
+++ b/packages/client/tsconfig.json
@@ -71,5 +71,6 @@
     }
   },
   "include": ["src"],
+  "exclude": ["src/**/*.test.ts", "src/**/*.test.tsx"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
