--- a/packages/backups/package.json
+++ b/packages/backups/package.json
@@ -31,7 +31,8 @@
   },
   "dependencies": {
     "@uiw/react-md-editor": "4.0.11",
-    "lucide-react": "0.564.0"
+    "lucide-react": "0.564.0",
+    "mermaid": "11.12.2"
   },
   "devDependencies": {
     "@tearleads/ui": "workspace:*",
