--- a/.github/workflows/main-version-bump.yml
+++ b/.github/workflows/main-version-bump.yml
@@ -19,6 +19,9 @@ jobs:
     if: github.event.workflow_run.conclusion == 'success'
     runs-on: ${{ vars.USE_SELF_HOSTED == 'true' && 'self-hosted' || 'ubuntu-latest' }}
     timeout-minutes: 15
+    env:
+      MERGE_SIGNING_APP_ID: ${{ secrets.MERGE_SIGNING_APP_ID }}
+      MERGE_SIGNING_APP_PRIVATE_KEY: ${{ secrets.MERGE_SIGNING_APP_PRIVATE_KEY }}
     steps:
       - uses: actions/checkout@v4
         with:
@@ -66,8 +69,8 @@ jobs:
         if: steps.prepare.outputs.skip_reason == '' && steps.app-credentials.outputs.available == 'true'
         uses: actions/create-github-app-token@v1
         with:
-          app-id: ${{ secrets.MERGE_SIGNING_APP_ID }}
-          private-key: ${{ secrets.MERGE_SIGNING_APP_PRIVATE_KEY }}
+          app-id: ${{ env.MERGE_SIGNING_APP_ID }}
+          private-key: ${{ env.MERGE_SIGNING_APP_PRIVATE_KEY }}
           owner: ${{ github.repository_owner }}
 
       - name: Bump versions directly on main with retries
