chore(extract): checkpoint decoupling

--- a/packages/compliance/package.json
+++ b/packages/compliance/package.json
@@ -28,6 +28,7 @@
     "react-router-dom": "7.13.0"
   },
   "dependencies": {
+    "@tearleads/backups": "workspace:*",
     "lucide-react": "0.564.0"
   },
   "devDependencies": {
