--- a/packages/admin/package.json
+++ b/packages/admin/package.json
@@ -29,6 +29,7 @@
     "react-router-dom": "7.13.0"
   },
   "dependencies": {
+    "@tearleads/backups": "workspace:*",
     "@tearleads/compliance": "workspace:*",
     "@tearleads/shared": "workspace:*",
     "lucide-react": "0.564.0",
