--- a/packages/console/package.json
+++ b/packages/console/package.json
@@ -31,6 +31,7 @@
     "react-router-dom": "7.13.0"
   },
   "dependencies": {
+    "@tearleads/backups": "workspace:*",
     "lucide-react": "0.564.0"
   },
   "devDependencies": {
