--- a/packages/help/package.json
+++ b/packages/help/package.json
@@ -30,6 +30,7 @@
     "react-router-dom": "7.13.0"
   },
   "dependencies": {
+    "@tearleads/backups": "workspace:*",
     "lucide-react": "0.564.0"
   },
   "devDependencies": {
