--- a/packages/vfs-sync/package.json
+++ b/packages/vfs-sync/package.json
@@ -33,6 +33,7 @@
     "react-router-dom": "7.13.0"
   },
   "dependencies": {
+    "@tearleads/ui": "workspace:*",
     "@tearleads/shared": "workspace:*",
     "lucide-react": "0.564.0"
   },
