--- a/packages/api-client/package.json
+++ b/packages/api-client/package.json
@@ -29,13 +29,6 @@
     "@tearleads/shared": "workspace:*"
   },
   "devDependencies": {
-    "@tearleads/msw": "workspace:*",
-    "@types/node": "25.2.3",
-    "@vitest/coverage-v8": "4.0.18",
-    "cross-env": "10.1.0",
-    "jsdom": "28.1.0",
-    "typescript": "5.9.3",
-    "vitest": "4.0.18",
-    "vitest-fail-on-console": "0.10.1"
+    "@tearleads/msw": "workspace:*"
   }
 }
