feat(db): add local write orchestrator

--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -70,6 +70,7 @@
     "@tearleads/email": "workspace:*",
     "@tearleads/health": "workspace:*",
     "@tearleads/help": "workspace:*",
+    "@tearleads/local-write-orchestrator": "workspace:*",
     "@tearleads/mls-chat": "workspace:*",
     "@tearleads/notes": "workspace:*",
     "@tearleads/notifications": "workspace:*",
