--- a/packages/client/tsconfig.json
+++ b/packages/client/tsconfig.json
@@ -42,6 +42,8 @@
       "@tearleads/health": ["../health/src/index.ts"],
       "@tearleads/help/package.json": ["../help/package.json"],
       "@tearleads/help": ["../help/src/index.ts"],
+      "@tearleads/local-write-orchestrator/package.json": ["../local-write-orchestrator/package.json"],
+      "@tearleads/local-write-orchestrator": ["../local-write-orchestrator/src/index.ts"],
       "@tearleads/keychain/package.json": ["../keychain/package.json"],
       "@tearleads/keychain": ["../keychain/src/index.ts"],
       "@tearleads/wallet/package.json": ["../wallet/package.json"],
