--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -30,10 +30,11 @@
   "author": "",
   "license": "UNLICENSED",
   "dependencies": {
+    "@aws-sdk/client-s3": "3.992.0",
     "@tearleads/db": "workspace:*",
+    "@tearleads/shared": "workspace:*",
     "@tearleads/sync": "workspace:*",
     "@tearleads/vfs-sync": "workspace:*",
-    "@tearleads/shared": "workspace:*",
     "commander": "14.0.3",
     "cors": "2.8.6",
     "dotenv": "17.3.1",
