refactor(core): decouple package test deps

--- a/packages/keychain/tsconfig.json
+++ b/packages/keychain/tsconfig.json
@@ -12,8 +12,7 @@
     "composite": true,
     "baseUrl": ".",
     "paths": {
-      "@/*": ["../client/src/*"],
-      "@client/*": ["../client/src/*"],
+      "@/*": ["./src/*"],
       "@keychain/*": ["./src/*"]
     },
     "tsBuildInfoFile": "./dist/.tsbuildinfo"
