--- a/packages/console/tsconfig.json
+++ b/packages/console/tsconfig.json
@@ -12,8 +12,7 @@
     "composite": true,
     "baseUrl": ".",
     "paths": {
-      "@/*": ["../client/src/*"],
-      "@client/*": ["../client/src/*"],
+      "@/*": ["./src/*"],
       "@console/*": ["./src/*"],
       "@tearleads/help/package.json": ["../help/package.json"],
       "@tearleads/help": ["../help/src/index.ts"]
