refactor(core): reduce stale client aliases

--- a/packages/compliance/tsconfig.json
+++ b/packages/compliance/tsconfig.json
@@ -13,8 +13,7 @@
     "resolveJsonModule": true,
     "baseUrl": ".",
     "paths": {
-      "@/*": ["../client/src/*"],
-      "@client/*": ["../client/src/*"],
+      "@/*": ["./src/*"],
       "@compliance/*": ["./src/*"]
     },
     "tsBuildInfoFile": "./dist/.tsbuildinfo"
