feat(sync): add vfs network orchestrators
Add CRDT and blob network flushers in api-client and a combined write orchestrator with local-write queue integration.

--- a/packages/api-client/package.json
+++ b/packages/api-client/package.json
@@ -26,7 +26,9 @@
     "test:coverage": "cross-env DOTENV_CONFIG_QUIET=true vitest run --coverage"
   },
   "dependencies": {
-    "@tearleads/shared": "workspace:*"
+    "@tearleads/local-write-orchestrator": "workspace:*",
+    "@tearleads/shared": "workspace:*",
+    "@tearleads/vfs-sync": "workspace:*"
   },
   "devDependencies": {
     "@tearleads/msw": "workspace:*"
