chore(knip): tighten client dep declarations

--- a/packages/client/package.json
+++ b/packages/client/package.json
@@ -60,6 +60,7 @@
     "@tearleads/ai": "workspace:*",
     "@tearleads/analytics": "workspace:*",
     "@tearleads/audio": "workspace:*",
+    "@tearleads/backups": "workspace:*",
     "@tearleads/businesses": "workspace:*",
     "@tearleads/calendar": "workspace:*",
     "@tearleads/camera": "workspace:*",
@@ -121,7 +122,6 @@
     "@types/node": "25.2.3",
     "@types/react": "19.2.14",
     "@types/react-dom": "19.2.3",
-    "@types/wicg-file-system-access": "2023.10.7",
     "@vitejs/plugin-react": "5.1.4",
     "@vitest/coverage-v8": "4.0.18",
     "@webgpu/types": "0.1.69",
@@ -131,6 +131,7 @@
     "electron-builder": "26.7.0",
     "electron-vite": "5.0.0",
     "jsdom": "28.1.0",
+    "jiti": "2.6.1",
     "openapi-types": "12.1.3",
     "rollup-plugin-visualizer": "6.0.5",
     "svgo": "4.0.0",
