--- a/terraform/stacks/prod/k8s/manifests/cert-manager-issuer.yaml
+++ b/terraform/stacks/prod/k8s/manifests/cert-manager-issuer.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   acme:
     server: https://acme-v02.api.letsencrypt.org/directory
-    email: REPLACE_WITH_YOUR_EMAIL
+    email: __LETSENCRYPT_EMAIL__
     privateKeySecretRef:
       name: letsencrypt-prod-account-key
     solvers:
