--- a/.github/workflows/deploy-ios-matrix.yml
+++ b/.github/workflows/deploy-ios-matrix.yml
@@ -225,6 +225,7 @@ jobs:
           MATCH_GIT_URL: ${{ secrets[format('{0}_MATCH_GIT_URL', env.APP_ID)] || secrets.MATCH_GIT_URL }}
           MATCH_PASSWORD: ${{ secrets[format('{0}_MATCH_PASSWORD', env.APP_ID)] || secrets.MATCH_PASSWORD }}
           MATCH_GIT_BASIC_AUTHORIZATION: ${{ secrets[format('{0}_MATCH_GIT_BASIC_AUTHORIZATION', env.APP_ID)] || secrets.MATCH_GIT_BASIC_AUTHORIZATION }}
+          MATCH_ALLOW_PROFILE_CREATION: 'true'
 
       - name: Verify clean build
         if: steps.check_build.outputs.skip != 'true'
