--- a/.github/workflows/deploy-android-play-store.yml
+++ b/.github/workflows/deploy-android-play-store.yml
@@ -266,5 +266,6 @@ jobs:
         env:
           CI: true
           GOOGLE_PLAY_JSON_KEY_FILE: ${{ github.workspace }}/.secrets/google-play-service-account.json
+          OPENROUTER_API_KEY: ${{ secrets.OPENROUTER_API_KEY }}
           ANTHROPIC_API_KEY: ${{ secrets.ANTHROPIC_API_KEY }}
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
