--- a/.github/workflows/deploy-ios-matrix.yml
+++ b/.github/workflows/deploy-ios-matrix.yml
@@ -240,6 +240,7 @@ jobs:
           APP_DISPLAY_NAME: ${{ steps.config.outputs.display_name }}
           APP_STORE_CONNECT_KEY_ID: ${{ secrets[format('{0}_APP_STORE_CONNECT_KEY_ID', env.APP_ID)] || secrets.APP_STORE_CONNECT_KEY_ID }}
           APP_STORE_CONNECT_ISSUER_ID: ${{ secrets[format('{0}_APP_STORE_CONNECT_ISSUER_ID', env.APP_ID)] || secrets.APP_STORE_CONNECT_ISSUER_ID }}
+          OPENROUTER_API_KEY: ${{ secrets.OPENROUTER_API_KEY }}
           ANTHROPIC_API_KEY: ${{ secrets.ANTHROPIC_API_KEY }}
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
