fix(maestro): use valid stopApp command

--- a/packages/client/.maestro/sync-login-landscape-keyboard.yaml
+++ b/packages/client/.maestro/sync-login-landscape-keyboard.yaml
@@ -19,7 +19,7 @@ appId: com.tearleads.app
     when:
       notVisible: "Files"
     commands:
-      - terminateApp
+      - stopApp
       - launchApp:
           clearState: false
       - extendedWaitUntil:
