--- a/tuxedo/config/tmux.conf
+++ b/tuxedo/config/tmux.conf
@@ -45,8 +45,8 @@ bind -n MouseDrag1Pane if-shell -F "#{||:#{pane_in_mode},#{&&:#{alternate_on},#{
 bind -n C-t run-shell 'tmux new-window -c "#{pane_current_path}"'
 bind '"' run-shell 'tmux split-window -v -c "#{pane_current_path}"'
 bind % run-shell 'tmux split-window -h -c "#{pane_current_path}"'
-bind -n S-Left select-pane -p 
-bind -n S-Right select-pane -n
+bind -n S-Left select-pane -t :.-
+bind -n S-Right select-pane -t :.+
 bind-key -n M-Left previous-window \; select-pane -t 0
 bind-key -n M-Right next-window \; select-pane -t 0
 bind-key -n C-r run-shell 'tmux source-file "${TUXEDO_TMUX_CONF:-$HOME/.tmux.conf}" && tmux display-message "Config reloaded"'
