fix(tuxedo): use direct tmux commands for path expansion
Remove run-shell wrapper from split/new-window bindings so tmux
expands #{pane_current_path} correctly. The run-shell approach
passed the format string literally to the shell instead of
expanding it first.

--- a/tuxedo/config/tmux.conf
+++ b/tuxedo/config/tmux.conf
@@ -42,16 +42,16 @@ bind -n MouseDown1Pane select-pane -t= \; send-keys -M
 bind -n MouseDrag1Pane if-shell -F "#{||:#{pane_in_mode},#{&&:#{alternate_on},#{!=:#{m/r:^screen,#{pane_current_command}},1}}}" { send-keys -M } { copy-mode -M }
 
 # Keybindings
-bind -n C-t run-shell 'tmux new-window -c "#{pane_current_path}"'
-bind '"' run-shell 'tmux split-window -v -c "#{pane_current_path}"'
-bind % run-shell 'tmux split-window -h -c "#{pane_current_path}"'
+bind -n C-t new-window -c "#{pane_current_path}"
+bind '"' split-window -v -c "#{pane_current_path}"
+bind % split-window -h -c "#{pane_current_path}"
 bind -n S-Left select-pane -t :.-
 bind -n S-Right select-pane -t :.+
 bind-key -n M-Left previous-window \; select-pane -t 0
 bind-key -n M-Right next-window \; select-pane -t 0
 bind-key -n C-r run-shell 'tmux source-file "${TUXEDO_TMUX_CONF:-$HOME/.tmux.conf}" && tmux display-message "Config reloaded"'
 bind-key -n C-k clear-history \; send-keys clear Enter
-bind-key -n C-g run-shell "tmux new-window -n \"gemini\" -c \"#{pane_current_path}\" \"gemini\""
+bind-key -n C-g new-window -n "gemini" -c "#{pane_current_path}" "gemini"
 
 # History and Scrolling
 set -g history-limit 2000
