feat(tuxedo): use GNU screen splits instead of tmux splits
Screen splits persist across tmux restarts, improving session
durability. Changes:

- Add screen region navigation keybindings (Shift+Left/Right)
- Add screen split keybindings (Ctrl-a -, Ctrl-a \)
- Replace tmux right-click menu with screen-based splits
- Startup creates editor splits inside screen sessions
- Remove workspace git pull on startup (no longer needed)

--- a/tuxedo/config/tmux.conf
+++ b/tuxedo/config/tmux.conf
@@ -41,12 +41,21 @@ set -g mouse on
 bind -n MouseDown1Pane select-pane -t= \; send-keys -M
 bind -n MouseDrag1Pane if-shell -F "#{||:#{pane_in_mode},#{&&:#{alternate_on},#{!=:#{m/r:^screen,#{pane_current_command}},1}}}" { send-keys -M } { copy-mode -M }
 
+# Custom right-click menu with screen splits instead of tmux splits
+bind -n MouseDown3Pane display-menu -T "#[align=centre]Screen Splits" -t = -x M -y M \
+    "Horizontal Split (screen)" h { send-keys C-a - } \
+    "Vertical Split (screen)" v { send-keys C-a \\ } \
+    "Close Region" x { send-keys C-a x } \
+    "" \
+    "Copy Word" c { copy-mode -q ; set-buffer "#{q:mouse_word}" } \
+    "Copy Line" l { copy-mode -q ; set-buffer "#{q:mouse_line}" }
+
 # Keybindings
 bind -n C-t new-window -c "#{pane_current_path}"
-bind '"' split-window -v -c "#{pane_current_path}"
-bind % split-window -h -c "#{pane_current_path}"
-bind -n S-Left select-pane -t :.-
-bind -n S-Right select-pane -t :.+
+# Screen region splits (sends Ctrl-a - for horizontal, Ctrl-a \ for vertical)
+bind '"' send-keys C-a -
+bind % send-keys C-a \\
+# S-Left/S-Right pass through to screen for region navigation (no tmux binding)
 bind-key -n M-Left previous-window \; select-pane -t 0
 bind-key -n M-Right next-window \; select-pane -t 0
 bind-key -n C-r run-shell 'tmux source-file "${TUXEDO_TMUX_CONF:-$HOME/.tmux.conf}" && tmux display-message "Config reloaded"'
