feat(tuxedo): add mouse support for screen regions
- Enable mousetrack for clicking to change screen region focus
- Pass mouse clicks through tmux to screen
- Add mouse wheel scrollback via screen copy mode
- Wheel up enters copy mode and scrolls up 3 lines
- Wheel down scrolls down 3 lines in copy mode

--- a/tuxedo/config/tmux.conf
+++ b/tuxedo/config/tmux.conf
@@ -36,9 +36,9 @@ set -g pane-active-border-style "fg=#7aa2f7"
 # Message styling
 set -g message-style "bg=#1a1b26,fg=#7aa2f7"
 
-# Mouse support
+# Mouse support - pass clicks through to screen for region focus
 set -g mouse on
-bind -n MouseDown1Pane select-pane -t= \; send-keys -M
+bind -n MouseDown1Pane send-keys -M
 bind -n MouseDrag1Pane if-shell -F "#{||:#{pane_in_mode},#{&&:#{alternate_on},#{!=:#{m/r:^screen,#{pane_current_command}},1}}}" { send-keys -M } { copy-mode -M }
 
 # Custom right-click menu with screen splits instead of tmux splits
@@ -62,9 +62,13 @@ bind-key -n C-r run-shell 'tmux source-file "${TUXEDO_TMUX_CONF:-$HOME/.tmux.con
 bind-key -n C-k clear-history \; send-keys clear Enter
 bind-key -n C-g new-window -n "gemini" -c "#{pane_current_path}" "gemini"
 
-# History and Scrolling
+# History and Scrolling - send screen copy mode commands for scrollback
 set -g history-limit 2000
 set -g aggressive-resize on
+# Wheel up: enter screen copy mode (Ctrl-a Escape) and scroll up 3 lines
+bind -n WheelUpPane send-keys C-a Escape k k k
+# Wheel down: scroll down 3 lines in copy mode (j), or exit if at bottom
+bind -n WheelDownPane send-keys j j j
 bind -T copy-mode-vi WheelUpPane send-keys -X -N 3 scroll-up
 bind -T copy-mode-vi WheelDownPane send-keys -X -N 3 scroll-down
 bind -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-selection-and-cancel
