feat(tuxedo): replace GNU screen with nested tmux for session persistence
Switch from GNU screen to nested tmux for pane splitting. Benefits:
- Mouse selection respects pane boundaries (screen limitation fixed)
- Inner sessions survive outer tmux restarts (same persistence benefit)
- Better mouse support overall

Key changes:
- Add tmux-inner.conf with Ctrl-a prefix (outer uses Ctrl-b)
- Replace screen_* functions with inner_tmux_* functions
- Update tuxedoKill.sh to terminate inner tmux sessions
- Update tests for new inner tmux behavior
- Outer tmux passes mouse events through to inner tmux

--- a/tuxedo/config/tmux.conf
+++ b/tuxedo/config/tmux.conf
@@ -36,39 +36,34 @@ set -g pane-active-border-style "fg=#7aa2f7"
 # Message styling
 set -g message-style "bg=#1a1b26,fg=#7aa2f7"
 
-# Mouse support - pass clicks through to screen for region focus
+# Mouse support - pass through to inner tmux for selection and focus
 set -g mouse on
-bind -n MouseDown1Pane send-keys -M
-bind -n MouseDrag1Pane if-shell -F "#{||:#{pane_in_mode},#{&&:#{alternate_on},#{!=:#{m/r:^screen,#{pane_current_command}},1}}}" { send-keys -M } { copy-mode -M }
 
-# Custom right-click menu with screen splits instead of tmux splits
-bind -n MouseDown3Pane display-menu -T "#[align=centre]Screen Splits" -t = -x M -y M \
-    "Horizontal Split (screen)" h { send-keys C-a - } \
-    "Vertical Split (screen)" v { send-keys C-a \\ } \
-    "Close Region" x { send-keys C-a x } \
+# Custom right-click menu with inner tmux splits
+bind -n MouseDown3Pane display-menu -T "#[align=centre]Pane Splits" -t = -x M -y M \
+    "Horizontal Split" h { send-keys C-a - } \
+    "Vertical Split" v { send-keys C-a \\ } \
+    "Close Pane" x { send-keys C-a x } \
     "" \
     "Copy Word" c { copy-mode -q ; set-buffer "#{q:mouse_word}" } \
     "Copy Line" l { copy-mode -q ; set-buffer "#{q:mouse_line}" }
 
 # Keybindings
 bind -n C-t new-window -c "#{pane_current_path}"
-# Screen region splits (sends Ctrl-a - for horizontal, Ctrl-a \ for vertical)
+# Inner tmux splits (sends Ctrl-a - for horizontal, Ctrl-a \ for vertical)
 bind '"' send-keys C-a -
 bind % send-keys C-a \\
-# S-Left/S-Right pass through to screen for region navigation (no tmux binding)
+# S-Left/S-Right pass through to inner tmux for pane navigation (no outer binding)
 bind-key -n M-Left previous-window \; select-pane -t 0
 bind-key -n M-Right next-window \; select-pane -t 0
 bind-key -n C-r run-shell 'tmux source-file "${TUXEDO_TMUX_CONF:-$HOME/.tmux.conf}" && tmux display-message "Config reloaded"'
 bind-key -n C-k clear-history \; send-keys clear Enter
 bind-key -n C-g new-window -n "gemini" -c "#{pane_current_path}" "gemini"
 
-# History and Scrolling - send screen copy mode commands for scrollback
+# History and Scrolling - pass through to inner tmux
 set -g history-limit 2000
 set -g aggressive-resize on
-# Wheel up: enter screen copy mode (Ctrl-a Escape) and scroll up 3 lines
-bind -n WheelUpPane send-keys C-a Escape k k k
-# Wheel down: scroll down 3 lines in copy mode (j), or exit if at bottom
-bind -n WheelDownPane send-keys j j j
+# Mouse events pass through to inner tmux (or application) for scrolling
 bind -T copy-mode-vi WheelUpPane send-keys -X -N 3 scroll-up
 bind -T copy-mode-vi WheelDownPane send-keys -X -N 3 scroll-down
 bind -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-selection-and-cancel
