feat(tuxedo): add telescope/neo-tree perf and fix mouse copy
Telescope:
- Add telescope-fzf-native for faster fuzzy finding
- Use fd for file finding
- Respect .gitignore by default
- Add keybindings (\ff, \fg, \fb, \fh, \fr, \fs)

Neo-tree:
- Enable async directory scanning
- Respect .gitignore, disable slow file watcher
- Group empty directories

Mouse selection:
- Outer tmux handles all text selection
- Copy to system clipboard via pbcopy
- Clicks pass through to inner tmux

--- a/tuxedo/config/tmux.conf
+++ b/tuxedo/config/tmux.conf
@@ -36,8 +36,11 @@ set -g pane-active-border-style "fg=#7aa2f7"
 # Message styling
 set -g message-style "bg=#1a1b26,fg=#7aa2f7"
 
-# Mouse support - pass through to inner tmux for selection and focus
+# Mouse support - outer tmux handles selection, clicks pass through
 set -g mouse on
+bind -n MouseDrag1Pane copy-mode -M
+bind -n MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "pbcopy"
+bind -n MouseDown1Pane select-pane -t = \; send-keys -M
 
 # Custom right-click menu with inner tmux splits
 bind -n MouseDown3Pane display-menu -T "#[align=centre]Pane Splits" -t = -x M -y M \
