fix(tuxedo): mouse copy to clipboard and neovim clipboard support
- Remove duplicate MouseDragEnd1Pane binding that was overriding pbcopy
- Inner tmux copies to system clipboard via /usr/bin/pbcopy
- Add 'y' key binding in copy-mode-vi for manual copy
- Neovim uses system clipboard (unnamedplus)
- Neo-tree width increased to 40

--- a/tuxedo/config/tmux.conf
+++ b/tuxedo/config/tmux.conf
@@ -36,10 +36,10 @@ set -g pane-active-border-style "fg=#7aa2f7"
 # Message styling
 set -g message-style "bg=#1a1b26,fg=#7aa2f7"
 
-# Mouse support - outer tmux handles selection, clicks pass through
+# Mouse support - pass through to inner tmux for pane-isolated selection
 set -g mouse on
-bind -n MouseDrag1Pane copy-mode -M
-bind -n MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "pbcopy"
+bind -n MouseDrag1Pane send-keys -M
+bind -n MouseDragEnd1Pane send-keys -M
 bind -n MouseDown1Pane select-pane -t = \; send-keys -M
 
 # Custom right-click menu with inner tmux splits
