--- a/tuxedo/config/tmux-inner.conf
+++ b/tuxedo/config/tmux-inner.conf
@@ -21,8 +21,11 @@ set -g pane-border-style "fg=#3b4261"
 set -g pane-active-border-style "fg=#7aa2f7"
 set -g pane-border-status off
 
-# Mouse support - full native tmux mouse handling
+# Mouse support - apps like neovim handle their own mouse, otherwise use copy-mode
 set -g mouse on
+bind -n MouseDrag1Pane if-shell -F "#{mouse_any_flag}" "send-keys -M" "copy-mode -M"
+bind -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "/usr/bin/pbcopy"
+bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "/usr/bin/pbcopy"
 
 # Pane navigation with Shift+Left/Right
 bind -n S-Left select-pane -t :.-
@@ -44,4 +47,3 @@ bind r source-file "$TUXEDO_INNER_CONF" \; display-message "Inner config reloade
 set -g history-limit 10000
 bind -T copy-mode-vi WheelUpPane send-keys -X -N 3 scroll-up
 bind -T copy-mode-vi WheelDownPane send-keys -X -N 3 scroll-down
-bind -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-selection-and-cancel
