fix(tuxedo): address Gemini review feedback
- Change scan_mode from deep to shallow for better performance
- Use pbcopy from PATH instead of hardcoded /usr/bin/pbcopy

--- a/tuxedo/config/tmux-inner.conf
+++ b/tuxedo/config/tmux-inner.conf
@@ -24,8 +24,8 @@ set -g pane-border-status off
 # Mouse support - apps like neovim handle their own mouse, otherwise use copy-mode
 set -g mouse on
 bind -n MouseDrag1Pane if-shell -F "#{mouse_any_flag}" "send-keys -M" "copy-mode -M"
-bind -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "/usr/bin/pbcopy"
-bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "/usr/bin/pbcopy"
+bind -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-and-cancel "pbcopy"
+bind -T copy-mode-vi y send-keys -X copy-pipe-and-cancel "pbcopy"
 
 # Pane navigation with Shift+Left/Right
 bind -n S-Left select-pane -t :.-
