feat(tuxedo): add neovim launcher and improve pane focus
Add neovim.sh script to launch neovim with tuxedo config.
Include tuxedo/scripts in workspace PATH for easy access.
Improve tmux pane focus with heavy borders, arrow indicators,
and subtle background dimming for inactive panes.

--- a/tuxedo/config/tmux-inner.conf
+++ b/tuxedo/config/tmux-inner.conf
@@ -20,6 +20,12 @@ set -g status off
 set -g pane-border-style "fg=#3b4261"
 set -g pane-active-border-style "fg=#7aa2f7"
 set -g pane-border-status off
+set -g pane-border-lines heavy
+set -g pane-border-indicators arrows
+
+# Dim inactive panes for clear focus indication
+set -g window-style "bg=#16161e"
+set -g window-active-style "bg=#1a1b26"
 
 # Mouse support - apps like neovim handle their own mouse, otherwise use copy-mode
 set -g mouse on
