--- a/tuxedo/config/tmux.conf
+++ b/tuxedo/config/tmux.conf
@@ -32,6 +32,12 @@ set -g window-status-separator "  "
 # Pane border styling
 set -g pane-border-style "fg=#3b4261"
 set -g pane-active-border-style "fg=#7aa2f7"
+set -g pane-border-lines heavy
+set -g pane-border-indicators arrows
+
+# Dim inactive panes for clear focus indication
+set -g window-style "bg=#16161e"
+set -g window-active-style "bg=#1a1b26"
 
 # Message styling
 set -g message-style "bg=#1a1b26,fg=#7aa2f7"
